--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan-body": "^2.6.9",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "pg-format": "^1.0.4"
